fixed the hovering and overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -336,28 +336,21 @@ main {
 	opacity: 0;
 }
 
-.toggle:checked ~ .sale-details {
-	max-height: 200vh;
+.toggle:checked ~ .sale-item {
+	max-height: 100vh;
 	opacity: 1;
 	overflow-y: auto;
+	margin-bottom: 20px;
 }
 
 /* selling items */
 
-.sale-details {
-	display: flex;
+.sale-item {
 	max-height: 0;
 	opacity: 0;
-	transition: max-height 1s, opacity 0.5s;
-	flex-direction: column;
-	overflow-y: visible;
-}
-
-.sale-item {
 	margin-left: 5vw;
 	display: flex;
-	justify-content: baseline;
-	margin-bottom: 20px;
+	transition: max-height 1s, opacity 0.5s, margin-button 0.5s;
 }
 
 .sale-item img {
